--- a/tenzies-app/src/index.css
+++ b/tenzies-app/src/index.css
@@ -1,68 +1,101 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+#root {
+  height: 100%;
 }
 
 body {
   margin: 0;
+  background-color: #0B2434;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  height: 100vh;
+  padding: 20px;
+  font-family: Karla;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+main {
+  height: 100%;
+  border-radius: 10px;
+  background-color: #F5F5F5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+main>.header-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.header-section>h1 {
+  font-family: Karla;
+  font-weight: 700;
+  font-size: 25.6px;
+  line-height: 100%;
+  margin-bottom: 0px;
+  color: #2B283A
+}
+
+.header-section>p {
+  max-width: 350px;
+  text-align: center;
+  color: #4A4E74;
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 13.11px;
+  line-height: 100%;
+  letter-spacing: -3%;
+  vertical-align: middle;
+}
+
+main>.dice-section {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+  align-items: center;
+  gap: 15px;
+
+}
+
+main>.dice-section>.dice {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FFFFFF;
+  width: 35px;
+  height: 35px;
+  opacity: 1;
+  border-radius: 3.81px;
+  box-shadow: 0px 2px 2px 0px #00000026;
+  font-weight: 700;
+  font-size: 20.59px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #2B283A
+}
+
+.btn-section>button {
+  width: 92 px;
+  height: 35 px;
+  opacity: 1;
+  border-radius: 3.81px;
+  background-color: #5035FF;
+  border: none;
+  font-family: Karla;
+  font-weight: 700;
+  font-size: 16.38px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+  vertical-align: middle;
+  padding:10px;
+  color:#FFFFFF;
+  margin-top:40px
+
 }
