--- a/tenzies-app/src/index.css
+++ b/tenzies-app/src/index.css
@@ -67,7 +67,7 @@ main>.dice-section>.dice {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #FFFFFF;
+  /* background-color: #FFFFFF; */
   width: 35px;
   height: 35px;
   opacity: 1;
@@ -77,7 +77,8 @@ main>.dice-section>.dice {
   font-size: 20.59px;
   line-height: 100%;
   letter-spacing: 0%;
-  color: #2B283A
+  color: #2B283A;
+  cursor: pointer;
 }
 
 .btn-section>button {
@@ -96,6 +97,7 @@ main>.dice-section>.dice {
   vertical-align: middle;
   padding:10px;
   color:#FFFFFF;
-  margin-top:40px
+  margin-top:40px;
+  cursor: pointer;
 
 }
